# ubik-micromouse

./: .gitmodules  CMakeLists.txt  Makefile  NOTES.md  README.md
cmake/: compilation_flags.cmake  openocd.cmake
concept_tests/: driver.cpp  driver.h  integrator.h  sine_lookup_table.py  supervision.cpp  supervision.h  templates.cpp  vec2.h
concept_tests/drivers/: uart.cpp
cpp_test/: driver.cpp
openocd/: connect.cfg.in  flash.cfg.in  gdb.cfg.in  gdbinit_pipe.in
src/: CMakeLists.txt  apply_cube_main_changes.sh  fix_systick.sh
src/cube/: .gitignore  CMakeLists.txt  cube_utils.cmake  extern_main.sh
src/cube/ubik-stm32f103/: ubik-stm32f103.ioc
src/cube/ubik-stm32f103/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
src/cube/ubik-stm32f103/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_TIM.c  stm32f1xx_it.c
src/freeRTOS/: CMakeLists.txt  FreeRTOSConfig.h
src/freeRTOS_cpp/: CMakeLists.txt  lockable.h  task_cpp.h
src/freeRTOScpp/: lambda.h  mutex.h  singleton_task.h
src/mpaland_printf/: CMakeLists.txt  README.md
src/ubik/: CMakeLists.txt  distance_sensors.cpp  distance_sensors.h  dynamic_memory.cpp  error_hooks.cpp  interrupts.cpp  macros.h  maze.cpp  supervision.cpp  supervision.h  system_monitor.cpp  system_monitor.h  timing.h  ubik.cpp
src/ubik/common/: CMakeLists.txt  as5045.cpp  as5045.h  distance_sensors.cpp  distance_sensors.h  dynamic_memory.cpp  error_hooks.cpp  hard_fault.c  integrator.h  interrupts.cpp  macros.h  robot_parameters.h  spi_devices.cpp  spi_devices.h
src/ubik/drivers/: CMakeLists.txt  device_driver.h  freertos_driver.cpp  freertos_driver.h  uart.cpp  uart.h
src/ubik/localization/: CMakeLists.txt  odometry.cpp  odometry.h
src/ubik/logging/: CMakeLists.txt  buffer.h  example.cpp  logging.h  print_bits.h  stats.cpp  stats.h  uart_logging.cpp  uart_logging_config.h
src/ubik/maze/: CMakeLists.txt  a.out  directions.h  example.cpp  maze.cpp  maze.h  maze_cells.h  maze_definitions.h  maze_generator.h  maze_interface.cpp  maze_interface.h  maze_wanderer.cpp  maze_wanderer.h  stack.h
src/ubik/movement/: CMakeLists.txt  as5045.cpp  as5045.h  controller.cpp  controller.h  controller_interface.cpp  correction.cpp  correction.h  driver.cpp  example.cpp  example.py  motor_control.cpp  motor_control.h  moves.cpp  moves.h  pid.h  regulator.cpp  regulator.h  spi_devices.cpp  spi_devices.h  trajectory.cpp  trajectory.h
src/ubik/movement/tests/: colorline.py  moves_test.cpp  moves_test.py  perfectly_forwarded.cpp  trajectory_test.cpp  trajectory_test.py
